--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,5 @@
 html,body{background:#eee}
-#chat{height:480px;width:100%;background:#fff;border:2px inset;overflow:auto}
+#chat{height:480px;background:#fff;border:2px inset;overflow:auto}
 .msg_login,.msg_logoff{color:#820}
 .msg{color:#222}
+#users{float:right;width:14em;overflow:auto;border:2px inset;height:480px}
