large input, no submit button, userlist small fix

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-html,body{background:#eee}
+html,body{background:#eee;margin:5px;padding:0}
 #chat{height:480px;background:#fff;border:2px inset;overflow:auto}
 .msg_login,.msg_logoff{color:#820}
 .msg{color:#222}
