--- a/static/basic.css
+++ b/static/basic.css
@@ -3,6 +3,7 @@ html,body{background:#eee;margin:5px;padding:0}
 .msg_login,.msg_logoff{color:#820}
 .msg,.msg_username{color:#222}
 .msg_username{background:#ddf}
+.msg_whisper{color:#777;font-style:italic}
 #users{float:right;width:14em;overflow:auto;border:2px inset;height:480px}
 
 .readbar{height:1px;overflow:hidden;background:#ddd}
