--- a/static/basic.css
+++ b/static/basic.css
@@ -1,7 +1,8 @@
 html,body{background:#eee;margin:5px;padding:0}
 #chat{height:480px;background:#fff;border:2px inset;overflow:auto}
 .msg_login,.msg_logoff{color:#820}
-.msg,.msg_username{color:#222}
+.msg,.msg_all,.msg_username{color:#222}
+.msg_all{background:#eef}
 .msg_username{background:#ddf}
 .msg_whisper{color:#777;font-style:italic}
 #users{float:right;width:14em;overflow:auto;border:2px inset;height:480px}
