--- a/static/zenburn.css
+++ b/static/zenburn.css
@@ -1,9 +1,10 @@
 html,body{background:#3f3f3f;color:#dcdccc;margin:5px;padding:0}
 #chat{height:480px;background:#4f4f4f;border:1px solid #2f2f2f;overflow:auto}
 .msg_login,.msg_logoff{color:#cc8c7c}
-.msg,.msg_username{color:#dcdccc}
+.msg,.msg_all,.msg_username{color:#dcdccc}
 .msg_whisper{color:#979777;font-style:italic}
 .msg_username{background:#1f1f1f}
+.msg_all{background:#2f2f2f}
 #users{background:#4f4f4f;color:#dcdccc;float:right;width:14em;overflow:auto;border:1px solid #2f2f2f;height:480px}
 
 a{color:#efdcbc}
