page style fixes

--- a/static/zenburn.css
+++ b/static/zenburn.css
@@ -1,18 +1,19 @@
 html,body{background:#3f3f3f;color:#dcdccc;margin:5px;padding:0}
 pre{margin:0}
 #chat{height:480px;background:#4f4f4f;border:1px solid #2f2f2f;overflow:auto}
+#chatlog td{padding:2px}
 #chatlog td:first-child{border-right:1px solid #979777;padding-right:0.3em}
 #chatlog td:last-child{border-left:1px solid #979777;padding-left:0.3em}
 #chatlog tr:nth-child(2n-1) td{background:#4a4a4a}
 .msg_login,.msg_logoff{color:#cc8c7c}
 .msg,.msg_all,.msg_username{color:#dcdccc}
 .msg_whisper{color:#979777;font-style:italic}
-.msg_username{background:#1f1f1f}
-.msg_all{background:#2f2f2f}
+.msg_username td{background:#1f1f1f !important}
+.msg_all td{background:#2f2f2f !important}
 #users{background:#4f4f4f;color:#dcdccc;float:right;width:14em;overflow:auto;border:1px solid #2f2f2f;height:480px}
 
 a{color:#efdcbc}
 a:visited{color:#cfac9c}
 input{color:#dcdccc;background:#4f4f4f;border:1px solid #2f2f2f}
 
-.readbar{height:1px;overflow:hidden;background:#6f6f6f;border:0 !important}
+.readbar{height:1px;overflow:hidden;background:#6f6f6f !important;border:0 !important;padding:0 !important}
