--- a/static/zenburn.css
+++ b/static/zenburn.css
@@ -1,9 +1,8 @@
 html,body{background:#3f3f3f;color:#dcdccc;margin:5px;padding:0}
 pre{margin:0}
 #chat{height:480px;background:#4f4f4f;border:1px solid #2f2f2f;overflow:auto}
-#chatlog td{padding:2px}
-#chatlog td:first-child{border-right:1px solid #979777;padding-right:0.3em}
-#chatlog td:last-child{border-left:1px solid #979777;padding-left:0.3em}
+#chatlog td{padding:2px 0.3em}
+#chatlog td:first-child, #chatlog td:nth-last-child(2){border-right:1px solid #979777}
 #chatlog tr:nth-child(2n-1) td{background:#4a4a4a}
 .msg_login,.msg_logoff{color:#cc8c7c}
 .msg,.msg_all,.msg_username{color:#dcdccc}
